<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_main"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/pilihGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/pilihMale"
            android:layout_width="@dimen/_150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:paddingLeft="@dimen/_30dp"
            android:paddingTop="@dimen/_20dp"
            android:paddingRight="@dimen/_30dp"
            android:paddingBottom="@dimen/_20dp"
            android:text="Laki-Laki"
            android:textColor="@drawable/radio_flat_text_selector"/>

        <RadioButton
            android:id="@+id/pilihFemale"
            android:layout_width="@dimen/_150dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:paddingLeft="@dimen/_30dp"
            android:paddingTop="@dimen/_20dp"
            android:paddingRight="@dimen/_30dp"
            android:paddingBottom="@dimen/_20dp"
            android:text="Perempuan"
            android:textColor="@drawable/radio_flat_text_selector"/>

    </RadioGroup>

    <TextView
        android:id="@+id/labelBobot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:text="@string/label_bobot"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/kurangBerat"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="@dimen/_20dp"
        android:onClick="kurangBerat"
        android:text="@string/logo_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBobot"/>

    <Button
        android:id="@+id/tambahBerat"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="tambahBerat"
        android:text="@string/logo_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBobot"/>

    <EditText
        android:id="@+id/inputBerat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/labelBobot"
        app:layout_constraintStart_toEndOf="@id/kurangBerat"
        app:layout_constraintEnd_toStartOf="@id/tambahBerat"
        app:layout_constraintVertical_bias="0.428"/>

    <TextView
        android:id="@+id/labelTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:gravity="center_horizontal"
        android:text="@string/height"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/inputBerat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/kurangTinggi"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="@dimen/_20dp"
        android:onClick="kurangTinggi"
        android:text="@string/logo_minus"
        app:layout_constraintTop_toBottomOf="@id/labelTinggi"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/tambahTinggi"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="@dimen/_20dp"
        android:onClick="tambahTinggi"
        android:text="@string/logo_plus"
        app:layout_constraintTop_toBottomOf="@id/labelTinggi"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/inputTinggi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelTinggi"
        app:layout_constraintStart_toEndOf="@id/kurangTinggi"
        app:layout_constraintEnd_toStartOf="@id/tambahTinggi"
        app:layout_constraintVertical_bias="0.595"/>

    <TextView
        android:id="@+id/labelUmur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:gravity="center_horizontal"
        android:text="@string/labelUmur"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTinggi"/>

    <Button
        android:id="@+id/kurangUmur"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="@dimen/_20dp"
        android:onClick="kurangUmur"
        android:text="@string/logo_minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelUmur"/>

    <Button
        android:id="@+id/tambahUmur"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:onClick="tambahUmur"
        android:text="@string/logo_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelUmur"/>

    <EditText
        android:id="@+id/inputUmur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/labelUmur"
        app:layout_constraintStart_toEndOf="@id/kurangUmur"
        app:layout_constraintEnd_toStartOf="@id/tambahUmur"/>

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:onClick="calculateBMI"
        android:text="@string/hitung_bmi"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputUmur"/>

</androidx.constraintlayout.widget.ConstraintLayout>